--- a/locales/fr.json
+++ b/locales/fr.json
@@ -124,7 +124,7 @@
     "quantity": "Quantité",
     "total": "Total",
     "remove": "Supprimer",
-    "shipping_taxes_notification": "Les frais de livraisons sont gratuits.",
+    "shipping_taxes_notification": "Des frais de livraison sont applicables en fonction de votre distance à nos partenaires.",
     "continue": "Continuez vos achats",
     "checkout": "Vérifier.",
     "order_notes": "Laissez une note avec votre commande",
