correct wrong information in cart page

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -133,7 +133,7 @@
     "quantity": "Quantité",
     "total": "Total",
     "remove": "Supprimer",
-    "shipping_taxes_notification": "Des frais de livraison sont applicables en fonction de votre distance à nos partenaires.",
+    "shipping_taxes_notification": "Seul le paiement de l'acompte se fait en ligne, le solde et les frais de livraisons se règlent le jour de l'installation.",
     "continue": "Continuez vos achats",
     "checkout": "Vérifier.",
     "order_notes": "Laissez une note avec votre commande",
